Fix the output of `get profiles ...` command
The `get profiles ...` command would return a warning about the `name`
field not existing.  The output form the command is now fixed to show
the table properly.

A secondary fix in this commit globalizes the templates in the runners
package.

--- a/internal/runners/templates/accounts/describe.tmpl
+++ b/internal/runners/templates/accounts/describe.tmpl
@@ -1,4 +1,4 @@
-Username: {{ .Username }} ({{ .Idi }})
+Username: {{ .Username }} ({{ .Id }})
 Email: {{ .Email }}
 Provenance: {{ .Provenance }}
 Currently logged in: {{ .LoggedIn }}
